# VideoProcessorNative

./: .gitignore  CMakeLists.txt  CMakePresets.json  Griffeye.VideoProcessor.Native.csproj  Griffeye.VideoProcessor.Native.deps.props  Griffeye.VideoProcessor.Native.vcxproj  Griffeye.VideoProcessor.Native.vcxproj.filters  README.md  VideoProcessorNative.sln  azp-sync-to-github.yaml  packages.config
Griffeye.VideoProcessor.Native/: Griffeye.VideoProcessor.Native.vcxproj  Griffeye.VideoProcessor.Native.vcxproj.filters
examples/: CMakeLists.txt  cli.c
src/: CMakeLists.txt  filter.c  filter.h  filtergraph.c  filtergraph.h  filters.c  filters.h  libvx.c  libvx.h  transcribe.c  transcribe.h  util.c  util.h
